@@ -4,7 +4,7 @@ IO.include("frame/Link.js");
 IO.include("frame/String.js");
 IO.include("frame/Hash.js");
 IO.include("frame/Namespace.js");
-IO.include("frame/Reflection.js");
+//IO.include("frame/Reflection.js");
 
 /** A few helper functions to make life a little easier. */
 
