@@ -2,14 +2,16 @@
 function Circle(){}
 
 /**
- @constructor
- @memberOf Circle.prototype
+	@constructor
+	@memberOf Circle#
  */
-Tangent = function(){};
+Circle.prototype.Tangent = function(){};
+
+// renaming Circle#Tangent to Circle#Circle#Tangent
 
 /**
-	@member Circle.prototype.Tangent.prototype
-*/
-getDiameter = function(){};
+	@memberOf Circle#Tangent#
+ */
+Circle.prototype.Tangent.prototype.getDiameter = function(){};
 
 
